--- a/geojsonFavullo/src/app/app.component.html
+++ b/geojsonFavullo/src/app/app.component.html
@@ -4,6 +4,6 @@
 
 	<agm-data-layer [geoJson]="geoJsonObject" [style]="styleFunc"></agm-data-layer>
 
-	<agm-marker *ngFor="let m of markers; let i = index" [latitude]="m.lat" [longitude]="m.lng" [label]="m.label"></agm-marker>
+	<agm-marker *ngFor="let m of markers" [latitude]="m.lat" [longitude]="m.lng" [label]="m.label"></agm-marker>
 
 </agm-map>
